--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LAKAN</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
 <body>
@@ -28,10 +29,122 @@
         <img src="deal1.png" alt="deal1">
     </div>
 
+    <div class="bestseller-section">
+    <h2>Best Selling Items</h2>
     <div class="bestseller">
         <div class="card">
-            
+            <img src="made.png" alt="MADE68PRO">
+            <h3>MADE68PRO</h3>
+            <p>Melgeek DIY Gaming Keyboard.</p>
+            <p class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i> (4.5)
+            </p>
+            <button>Add to Cart</button>
+        </div>
+        <div class="card">
+            <img src="iqunix.png" alt="IQUNIX EZ60">
+            <h3>IQUNIX EZ60</h3>
+            <p>Iqunix 60 Percent Mechanical Keyboard.</p>
+            <p class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i> (4.3)
+            </p>
+            <button>Add to Cart</button>
+        </div>
+        <div class="card">
+            <img src="scyrox.png" alt="scyrox">
+            <h3>SCYROX V8</h3>
+            <p>Scyrox Budget Gaming Mouse.</p>
+            <p class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i> (4.8)
+            </p>
+            <button>Add to Cart</button>
+        </div>
+        <div class="card">
+            <img src="moondrop.png" alt="moondrop">
+            <h3>MOONDROP STELLARIS</h3>
+            <p>Moondrop Budget In Ear Monitor.</p>
+            <p class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i> (4.5)
+            </p>
+            <button>Add to Cart</button>
         </div>
     </div>
+    
+    <div class="newarrivals-section">
+    <h2>New Arrivals</h2>
+    <div class="newarrivals">
+        <div class="card">
+            <img src="newkeyboard.jpg" alt="WOOTING 80HE">
+            <h3>WOOTING 80HE</h3>
+            <p class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+                <i class="far fa-star"></i> (3.5)
+            </p>
+            <p>Wooting Latest Gaming Keyboard.</p>
+            <button>Add to Cart</button>
+        </div>
+        <div class="card">
+            <img src="newmouse.jpg" alt="TENZ SE">
+            <h3>TENZ SE</h3>
+            <p class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i> (4.0)
+            </p>
+            <p>PULSAR Signature Edition Gaming Mouse.</p>
+            <button>Add to Cart</button>
+        </div>
+        <div class="card">
+            <img src="newheadset.jpg" alt="TORNADO">
+            <h3>TORNADO</h3>
+            <p class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+                <i class="far fa-star"></i> (3.5)
+            </p>
+            <p>Scyrox Budget Gaming Mousepad.</p>
+            <button>Add to Cart</button>
+        </div>
+        <div class="card">
+            <img src="newmonitor.jpg" alt="CHU II">
+            <h3>CHU II</h3>
+            <p class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+                <i class="far fa-star"></i> (3.5)
+            </p>
+            <p>MOONDROP Budget IEM.</p>
+            <button>Add to Cart</button>
+        </div>
+    </div>
+</div>
+
+
+</div>
 </body>
 </html>
