--- a/home.html
+++ b/home.html
@@ -143,8 +143,31 @@
         </div>
     </div>
 </div>
-
-
 </div>
+
+<footer class="site-footer">
+    <div class="footer-left">
+        <h2 class="brand-name">Group Members</h2>
+        <p>Consul, Miggy</p>
+        <p>Cortuna, Jhustine</p>
+        <p>Legaspi, Sean Martin</p>
+    </div>
+
+    <div class="footer-right">
+        <h2 class="brand-name">LAKÁN</h2>
+        <p>LAKÁN dedicates providing unique, effective & playful Peripherals.</p>
+        <p>Email: service@LAKANGAMING.com</a><br>
+        Response within 48 hours</p>
+
+        <div class="social-links">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-tiktok"></i></a>
+        </div>
+    </div>
+</footer>
+
 </body>
 </html>
