added community comments and placeholder of player

--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
         <ul class="accessability">
             <li><a href="#"><img src="search.png" alt="search"></a></li>
             <li><a href="#"><img src="profile.png" alt="profile"></a></li>
-            <li><a href="#"><img src="cart.png" alt="cart"></a></li>
+            <li><a href="cart.html"><img src="cart.png" alt="cart"></a></li>
         </ul>
     </div>
 
@@ -143,6 +143,36 @@
         </div>
     </div>
 </div>
+
+    <div class="quotes">
+        <div class="block left">
+            <img src="quote.png" alt="Quotation Mark Left" />
+            <div class="text-content">
+            The Brand is fantastic! the build quality, the lightness, the precision in pointing and clicking! A couple suggestions to exceed perfection: include a bag to protect it while traveling/commuting, reduce a little the travel of the side keys. Nice work!!
+            </div>
+        </div>
+
+        <!-- Middle block -->
+        <div class="block middle">
+            <img src="Logo.png" alt="LAKAN Logo" />
+        </div>
+
+        <!-- Right block -->
+        <div class="block right">
+            <img src="quote.png" alt="Quotation Mark Right" />
+            <div class="text-content">
+            This is exactly the feeling LAKÁN products give me — where passion leads, great products follow.
+            </div>
+        </div>
+        </div>
+    </div>
+
+    <div class="player">
+        <div class="overlay-text">Miggy "niiw" Consul</div>
+        <div class="overlay-subtext">Streamer and ex-Esports pro known for his dynamic gameplay, exceptional aim, and he support this brand.</div>
+        <img src="placeholder.png" alt="deal1">
+    </div>
+    
 </div>
 
 <footer class="site-footer">
@@ -168,6 +198,8 @@
         </div>
     </div>
 </footer>
+
+
 
 </body>
 </html>
