added weekly blogs

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
                 <li><a href="#">Mouse</a></li>
         </ul>
 
-        <img class="logo" src="Logo.png" alt="logo">
+        <img class="logo" src="Logo.png" alt="logo"></a>
         <ul class="accessability">
             <li><a href="#"><img src="search.png" alt="search"></a></li>
             <li><a href="#"><img src="profile.png" alt="profile"></a></li>
@@ -173,7 +173,28 @@
         <img src="placeholder.png" alt="deal1">
     </div>
     
+
+    <section class="weekly-blogs">
+        <h2>Weekly Blogs</h2>
+        <div class="blog-list">
+            <div class="blog-item">
+            <img src="building_NU_Manila_3x2.webp" alt="Blog 1">
+            <a href="#" class="blog-link">Creator of LAKÁN</a>
+            </div>
+            <div class="blog-item">
+            <img src="blog2.png" alt="Blog 2">
+            <a href="#" class="blog-link">Best Gaming Resellers in PH</a>
+            </div>
+            <div class="blog-item">
+            <img src="Logo.png" alt="Blog 3">
+            <a href="#" class="blog-link">Behind The Scenes of LAKÁN</a>
+            </div>
+        </div>
+    </section>  
+
 </div>
+
+
 
 <footer class="site-footer">
     <div class="footer-left">
