nav bar buttons now works

--- a/home.html
+++ b/home.html
@@ -12,10 +12,10 @@
     <!-- NAVBAR -->
     <div class="nav">
         <ul class="links">
-                <li><a href="#">New Release</a></li>
-                <li><a href="#">Keyboard</a></li>
-                <li><a href="#">Headset</a></li>
-                <li><a href="#">Mouse</a></li>
+                <li><a href="newrelease.html">New Release</a></li>
+                <li><a href="keyboard.html">Keyboard</a></li>
+                <li><a href="headset.html">Headset</a></li>
+                <li><a href="mouse.html">Mouse</a></li>
         </ul>
 
         <img class="logo" src="Logo.png" alt="logo"></a>
