--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cart - LAKÁN</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="cart.css" />
+  <link rel="stylesheet" href="mouse.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -13,10 +13,10 @@
   <!-- Navbar from main site -->
   <div class="nav">
     <ul class="links">
-      <li><a href="#">New Release</a></li>
-      <li><a href="#">Keyboard</a></li>
-      <li><a href="#">Headset</a></li>
-      <li><a href="#">Mouse</a></li>
+        <li><a href="newrelease.html">New Release</a></li>
+        <li><a href="keyboard.html">Keyboard</a></li>
+        <li><a href="headset.html">Headset</a></li>
+        <li><a href="mouse.html">Mouse</a></li>
     </ul>
     <img class="logo" src="Logo.png" alt="logo">
     <ul class="accessability">
