--- a/newrelease.html
+++ b/newrelease.html
@@ -20,9 +20,9 @@
     </ul>
     <img class="logo" src="Logo.png" alt="logo">
     <ul class="accessability">
-      <li><a href="#"><img src="search.png" alt="search"></a></li>
-      <li><a href="#"><img src="profile.png" alt="profile"></a></li>
-      <li><a href="#"><img src="cart.png" alt="cart"></a></li>
+        <li><a href="#"><img src="search.png" alt="search"></a></li>
+        <li><a href="#"><img src="profile.png" alt="profile"></a></li>
+        <li><a href="cart.html"><img src="cart.png" alt="cart"></a></li>
     </ul>
   </div>
 
