--- a/Buy.html
+++ b/Buy.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,19 +8,22 @@
     <link rel="stylesheet" href="buy.css">
 
 </head>
+
 <body>
     <div class="nav">
         <ul class="links">
-                <li><a href="#">New Release</a></li>
-                <li><a href="#">Keyboard</a></li>
-                <li><a href="#">Headset</a></li>
-                <li><a href="#">Mouse</a></li>
+            <li><a href="#">New Release</a></li>
+            <li><a href="#">Keyboard</a></li>
+            <li><a href="#">Headset</a></li>
+            <li><a href="#">Mouse</a></li>
         </ul>
 
-        <img class="logo" src="Logo.png" alt="logo">
+        <a href="home.html" class="logo-link">
+            <img class="logo" src="Logo.png" alt="logo">
+        </a>
         <ul class="accessability">
             <li><a href="#"><img src="search.png" alt="search"></a></li>
-            <li><a href="#"><img src="profile.png" alt="profile"></a></li>
+            <li><a href="login.html"><img src="profile.png" alt="profile"></a></li>
             <li><a href="#"><img src="cart.png" alt="cart"></a></li>
         </ul>
     </div>
