--- a/cart.html
+++ b/cart.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cart - LAKÁN</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="cart.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body>
 
   <!-- Navbar from main site -->
   <div class="nav">
     <ul class="links">
-        <li><a href="newrelease.html">New Release</a></li>
-        <li><a href="keyboard.html">Keyboard</a></li>
-        <li><a href="headset.html">Headset</a></li>
-        <li><a href="mouse.html">Mouse</a></li>
+      <li><a href="newrelease.html">New Release</a></li>
+      <li><a href="keyboard.html">Keyboard</a></li>
+      <li><a href="headset.html">Headset</a></li>
+      <li><a href="mouse.html">Mouse</a></li>
     </ul>
-    <img class="logo" src="Logo.png" alt="logo">
+    <a href="home.html" class="logo-link">
+      <img class="logo" src="Logo.png" alt="logo">
+    </a>
     <ul class="accessability">
-        <li><a href="#"><img src="search.png" alt="search"></a></li>
-        <li><a href="#"><img src="profile.png" alt="profile"></a></li>
-        <li><a href="cart.html"><img src="cart.png" alt="cart"></a></li>
+      <li><a href="#"><img src="search.png" alt="search"></a></li>
+      <li><a href="login.html"><img src="profile.png" alt="profile"></a></li>
+      <li><a href="cart.html"><img src="cart.png" alt="cart"></a></li>
     </ul>
   </div>
 
@@ -40,7 +44,7 @@
         <h2>SCYROX V8</h2>
         <p>₱3,499.00</p>
         <label for="quantity">Quantity:</label>
-        <input type="number" id="quantity" value="1" min="1">
+        <input type="number" id="quantity" value="1" min="1" max="10">
         <button class="remove-btn">Remove</button>
       </div>
     </div>
@@ -52,4 +56,5 @@
   </main>
 
 </body>
+
 </html>
