--- a/headset.html
+++ b/headset.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mouse - LAKÁN</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Headset - LAKÁN</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="mouse.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body>
 
   <!-- Navbar from main site -->
   <div class="nav">
     <ul class="links">
-        <li><a href="newrelease.html">New Release</a></li>
-        <li><a href="keyboard.html">Keyboard</a></li>
-        <li><a href="headset.html">Headset</a></li>
-        <li><a href="mouse.html">Mouse</a></li>
+      <li><a href="newrelease.html">New Release</a></li>
+      <li><a href="keyboard.html">Keyboard</a></li>
+      <li><a href="headset.html">Headset</a></li>
+      <li><a href="mouse.html">Mouse</a></li>
     </ul>
-    <img class="logo" src="Logo.png" alt="logo">
+    <a href="home.html" class="logo-link">
+      <img class="logo" src="Logo.png" alt="logo">
+    </a>
     <ul class="accessability">
-        <li><a href="#"><img src="search.png" alt="search"></a></li>
-        <li><a href="#"><img src="profile.png" alt="profile"></a></li>
-        <li><a href="cart.html"><img src="cart.png" alt="cart"></a></li>
+      <li><a href="#"><img src="search.png" alt="search"></a></li>
+      <li><a href="login.html"><img src="profile.png" alt="profile"></a></li>
+      <li><a href="cart.html"><img src="cart.png" alt="cart"></a></li>
     </ul>
   </div>
 
@@ -31,57 +35,61 @@
     <a href="home.html" class="back-button"><i class="fas fa-arrow-left"></i> Go Back</a>
   </header>
 
-<main class="cart-container">
+  <main class="cart-container">
     <div class="cart-item">
-      <img src="scyrox.png" alt="Product Image">
+      <img src="https://ecommerce.datablitz.com.ph/cdn/shop/products/ehdfhgs_1024x.jpg?v=1679036915"
+        alt="Product Image">
       <div class="item-details">
-        <h2>Scyrox V8 Super Light Wireless Gaming Mouse (Black, White, Yellow)</h2>
+        <h2>Razer Kraken V3 X (2022) Gaming Headset</h2>
         <p class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-                <i class="far fa-star"></i> (120)
-            </p>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+          <i class="far fa-star"></i> (120)
+        </p>
       </div>
-       <div class="item-action">
-            <button class="add-to-cart-btn">Add to Cart</button>
-        </div>
+      <div class="item-action">
+        <button class="add-to-cart-btn">Add to Cart</button>
+      </div>
     </div>
 
     <div class="cart-item">
-      <img src="scyrox.png" alt="Product Image">
+      <img src="https://m.media-amazon.com/images/I/71IL4SsThNL.jpg" alt="Product Image">
       <div class="item-details">
-        <h2>ATTACK SHARK X6 49g SUPERLIGHT Mouse with Charging Dock, PixArt PAW3395 Gaming Sensor, BT/2.4G Wireless/Wired Gaming Mouse, 26000 DPI</h2>
+        <h2>Logitech G Pro X SE Blue Vo!ce DTS Headphone:X 2.0 Over Ear Wired Gaming Headset</h2>
         <p class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-                <i class="far fa-star"></i> (120)
-            </p>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+          <i class="far fa-star"></i> (120)
+        </p>
       </div>
-       <div class="item-action">
-            <button class="add-to-cart-btn">Add to Cart</button>
-        </div>
+      <div class="item-action">
+        <button class="add-to-cart-btn">Add to Cart</button>
+      </div>
     </div>
 
     <div class="cart-item">
-      <img src="scyrox.png" alt="Product Image">
+      <img
+        src="https://hyperx.com/cdn/shop/files/hyperx_cloud_iii_red_66x0049_main_1_1e24feae-b58f-4f17-a55f-eb05c8244b48.jpg?v=1747066850"
+        alt="Product Image">
       <div class="item-details">
-        <h2>Pulsar TenZ Signature Edition Wireless Gaming Mouse</h2>
+        <h2>HyperX Cloud III Gaming Headset 727A9AA Red</h2>
         <p class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-                <i class="far fa-star"></i> (120)
-            </p>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+          <i class="far fa-star"></i> (120)
+        </p>
       </div>
-       <div class="item-action">
-            <button class="add-to-cart-btn">Add to Cart</button>
-        </div>
+      <div class="item-action">
+        <button class="add-to-cart-btn">Add to Cart</button>
+      </div>
     </div>
 
 </body>
+
 </html>
